--- a/.github/workflows/deploy-to-cloud-run.yml
+++ b/.github/workflows/deploy-to-cloud-run.yml
@@ -54,8 +54,7 @@ jobs:
             --cpu 1 \
             --timeout 300 \
             --service-account=slack-assistant@$PROJECT_ID.iam.gserviceaccount.com \
-            --set-env-vars="NODE_ENV=production" \
-            --set-secrets="SLACK_USER_TOKEN=SLACK_USER_TOKEN:latest,API_KEY=API_KEY:latest,SLACK_ADD_MESSAGE_ENABLED=SLACK_ADD_MESSAGE_ENABLED:latest,SLACK_ALLOWED_CHANNELS=SLACK_ALLOWED_CHANNELS:latest"
+            --set-env-vars="NODE_ENV=production,SLACK_USER_TOKEN=${{ secrets.SLACK_USER_TOKEN }},API_KEY=${{ secrets.API_KEY }},SLACK_ADD_MESSAGE_ENABLED=${{ secrets.SLACK_ADD_MESSAGE_ENABLED }},SLACK_ALLOWED_CHANNELS=${{ secrets.SLACK_ALLOWED_CHANNELS }}"
 
       - name: Get service URL
         run: |
