--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ OPENAI_API_KEY=your-openai-api-key-here
 
 # Anthropic Claude API Configuration
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
+
+# Slack OAuth Configuration
+SLACK_CLIENT_ID=your-slack-client-id-here
+SLACK_CLIENT_SECRET=your-slack-client-secret-here
+SLACK_STATE_SECRET=your-random-secret-for-oauth-state
+SLACK_REDIRECT_URI=https://your-domain.com/slack/oauth_redirect
